# au-open-banking-client

./: .flake8  .gitignore  README.md  Taskfile.yml  cds_banking.yaml  modify_spec.py  pyproject.toml
contract-patches/: Make_version_optional.patch
spec/: au_open_banking_spec_README.md
spec/.openapi-generator/: FILES
spec/au_open_banking_spec/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
spec/au_open_banking_spec/api/: __init__.py  accounts_api.py  banking_api.py  direct_debits_api.py  payees_api.py  products_api.py  scheduled_payments_api.py
spec/au_open_banking_spec/docs/: AccountsApi.md  BankingAccountDetailV3.md  BankingAccountDetailV3AllOf.md  BankingAccountDetailV3AllOfFeaturesInner.md  BankingAccountV2.md  BankingApi.md  BankingAuthorisedEntity.md  BankingBalance.md  BankingBalancePurse.md  BankingBillerPayee.md  BankingCreditCardAccount.md  BankingDigitalWalletPayee.md  BankingDirectDebit.md  BankingDomesticPayee.md  BankingDomesticPayeeAccount.md  BankingDomesticPayeeCard.md  BankingDomesticPayeePayId.md  BankingInternationalPayee.md  BankingInternationalPayeeBankDetails.md  BankingInternationalPayeeBankDetailsBankAddress.md  BankingInternationalPayeeBeneficiaryDetails.md  BankingLoanAccountV2.md  BankingPayeeDetailV2.md  BankingPayeeDetailV2AllOf.md  BankingPayeeV2.md  BankingProductAdditionalInformationV2.md  BankingProductAdditionalInformationV2AdditionalInformationUris.md  BankingProductBundle.md  BankingProductCategory.md  BankingProductConstraint.md  BankingProductDepositRate.md  (+64 more)
tests/: conftest.py  test_dev.py
(+194 files in other folders)
